--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,42 +1,128 @@
 .contenedor{
-    background-color: #bdc3c7;
-    background-image: linear-gradient(160deg, #bdc3c7 0%, #2c3e50 100%);
+    display: flex;
+    background-image: url('/idwApi/src/public/img/hotelback2.jpg');
+    background-size:cover; /* Ajusta la imagen para cubrir todo el contenedor */
+    background-position: center; /* Centra la imagen horizontal y verticalmente */
+    max-width: 100%;
+    padding: 30px;
 }
+
 .contenedorFlex{
     display: flex;
+    justify-content: space-between;
     padding: 5px;
-    margin: 1%;
     align-items: center;
-    
-    width: auto;
-    
+    margin: 10px;
 }
 
 .imgLogo{
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
 }
 .tituloPrincipal{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 2.5em;
     color: white;   
 }
+
 .lista{
     display: flex;
     justify-content: space-around;
     list-style: none;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
-    
-    color: white;
     font-size: 1.2em;
-    align-items: center;
-}
-.backimg{
-    width: 100px;
-    height: 20px;
-}
-li{
-    margin-right: 7em;
+    margin: 0%;
    
+    padding: 20px;
+    background-color: #ffffff;
+    background: linear-gradient(90deg, rgb(255, 255, 255) 5%, rgb(132, 209, 241) 38%, rgb(255, 255, 255) 100%);
+}
+.lista li a{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    font-style: italic;
+    transition: text-decoration 0.3s;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: #ffffff;
+}
+.lista li a:hover {
+    background-color:rgb(30, 120, 160);
+}
+.caja {
+    border: 2px solid #000;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px; 
+    text-align: center;
+    height: 560px;
+    width: 400px;
+    background-color: #ffffff;
+    background: linear-gradient(90deg, rgb(255, 255, 255) 5%, rgb(132, 209, 241) 38%, rgb(255, 255, 255) 100%);
+}
+.caja img{
+    width: 338px;
+    border-radius: 7px;
+    margin: 2px;
+}
+.caja p{
+    margin: 10px;
+}
+.titulo2{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(0, 55, 78);
+    background: linear-gradient(90deg, rgba(0,55,78,1) 5%, rgba(30,120,160,1) 38%, rgba(7,31,48,1) 100%);
+}
+.titulo2 h1{
+    color: #ffffff;
+    
+}
+.sec2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/idwApi/src/public/img/florida.jpg');
+    background-size: cover; /* Ajusta la imagen para cubrir todo el contenedor */
+    background-position: center; /* Centra la imagen horizontal y verticalmente */
+    background-repeat: no-repeat; /* Evita la repetición de la imagen */
+    width: 100%; /* Ancho del contenedor */
+    height: 500px; /* Altura del contenedor */  
+}
+.imgBoton{
+    display: block; 
+    text-align: center;
+}
+button{
+    width: 80px;
+    height: 40px;
+    background-color: rgb(5, 170, 211);
+    border-radius: 6px;
+    text-shadow: rgb(255, 254, 254);
+    cursor: pointer;
+}
+button:hover {
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.7); /* Cambia la sombra al pasar el mouse */
+}
+.secEnd{
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgb(255, 255, 255) 5%, rgba(30,120,160,1) 38%, rgba(255,255,255,1) 100%);
+    
+}
+.caja2{
+    padding: 20px;
+    margin: 10px; 
+    text-align: center;
+
+}
+.footer{
+    text-align: center;
+    background-color: rgb(0, 55, 78);
+    background: linear-gradient(90deg, rgba(0,55,78,1) 5%, rgba(30,120,160,1) 38%, rgba(7,31,48,1) 100%);
+    padding: 5px;
+    margin-top: 0%;
+}
+body{
+    background-color: rgb(0, 55, 78);
+    background: linear-gradient(90deg, rgba(0,55,78,1) 5%, rgba(30,120,160,1) 38%, rgba(7,31,48,1) 100%);
 }
