--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,83 +1,151 @@
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-/* Estilo para la barra de nav */
-nav {
-    background-color: #333;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    text-align: center;
-}
-
-nav ul li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-nav ul li:last-child {
-    margin-right: 0;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    font-family:Arial, Helvetica, sans-serif;
-    padding: 10px 15px;
-}
-
-nav ul li a:hover {
-    background-color: #555;
-}
-
-/* Estilo para body */
+/*Estilo para body*/
 body{
-    font-size: 22px;
-    background-color: #fff;
-    color: #555;
+    font-family: Courier, 'Times New Roman', serif;
+    font-size: 1em;
+    background-color: #43abba;
+    color: #4f453e;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+/*Estilo para el header*/
+
+.logo{
+    width: 20%;
+    margin-top: 4%;
+    margin-left: 3%;
 }
 
-.featured-hotels{
+.header-content{
+    display:flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+
+/*Estilo para la barra de navegacion*/
+nav{
+    width: 100%;
+    height: 50px;
+    background-color: #fa862b;
+}
+
+nav ul{
     display: flex;
     justify-content: space-around;
+    list-style: none;
+    margin:0;
+    padding: 1%;
     flex-wrap: wrap;
-    margin-top: 50px  ;
 }
 
-.hotel {
-    flex: 0 1 30%;
-    text-align: center;
-}
-
-.hotel img {
-    width: 100%;
-    border-radius: 10px;
-}
-
-.hotel a {
-    color:#555;
+nav ul li a{
+    color:#4f453e;
     text-decoration: none;
-    font-size: 18px;
-    font-family:Arial, Helvetica, sans-serif;
-    display: block;
+    font-weight: bold;
 }
 
-.footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 30px 0;
+nav ul li a:hover{
+    color: #4b747a;
 }
+
+.first-p{
+    font-weight: bold;
+    text-align: center;
+    margin:20px;
+}
+
+/*Estilo para main*/
+
+.housing{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+.housing-item{
+    width:30%;
+    font-display: inline-block;
+    margin:0 1%;
+}
+
+article figure img{
+    max-height: 250px;
+}
+
+article figcaption{
+    font-weight: bold;
+}
+article p{
+    padding: 0 20px 20px 10px;
+}
+
+.footer{
+    background-color: #4f453e;
+    color:#fa862b;
+    padding: 25px 0;
+    text-align: center;
+}
+
+footer img{
+    width: 10%;
+}
+
+/*Estilo para página Nosotros*/
+#content-nosotros{
+    display:flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+#main-nosotros{
+    text-align: center;
+    max-width: 60%;
+}
+
+#aside-nosotros{
+    max-width: 25%;
+    padding: 0 0 0 20px;
+}
+
+#img-article-nosotros{
+    max-height: 500px;
+}
+
+/*Estilo para la pagina de contacto*/
+#contacto{
+    display:flex;
+    justify-content: space-around;
+}
+
+#contact-form{
+    display:grid;
+    grid-template-columns: 300px;
+}
+
+#falso-boton{
+    width: 100px;
+    height: 50px;
+    border-radius: 8%;
+    background: #fa862b;
+    margin: 20px 20px 50px 120px;
+    text-align: center;
+}
+#falso-boton p:hover{
+    color: #4b747a;
+}
+
+#consulta{
+    width: 360px;
+    height: 250px;
+}
+#tel{
+    width: 200px;
+    margin-top: 100px;
+
+}
+
+#email{
+    width: 200px;
+    margin-top: 100px;
+}
+
