--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -1,38 +1,101 @@
-.App {
-  text-align: center;
+/* COLORES */
+/* oscuro */
+/* #0C3B5A */
+/* claro */
+/* #1A84CB */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+  padding: 50px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: 'Quicksand', sans-serif;
+  color: #0C3B5A;
 }
 
-.App-header {
-  background-color: #282c34;
+.App{
   min-height: 100vh;
+  position: relative
+}
+
+header {
+  height: 60px;
+  padding: 10px 50px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 6px -6px #6c6c6c;
+}
+
+.logo:hover {
+  transform: scale(1.01);
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+nav ul li a,
+a {
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #1A84CB;
+}
+
+nav ul li a:visiter {
+  color: #0c3b5a;
+}
+
+.listItem {
+  float: left;
+  margin: auto 40px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.info {
+  text-align: center;
+  margin: 20px;
+}
+
+.contenedor {
+  display:flex;
+  justify-content: space-between;
+  padding: 30px;
+}
+
+.img-normalizada{
+width: 250px;
+height: 250px;
+object-fit: cover;
+  margin-left: 20px;
+}
+
+button {
+  background-color: #1A84CB;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+footer {
+  height: 80px;
+  width: 100%;
+  background-color: #0c3b5a;
+  color: #fff;
+  display: flex;
+  margin-top: 10px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  position: absolute;
+  bottom: 0
 }
