--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -49,6 +49,7 @@ a {
 
 nav ul li a:hover {
   color: #1A84CB;
+  text-decoration: none;
 }
 
 .listItem {
@@ -65,7 +66,7 @@ nav ul li a:hover {
 
 .contenedor {
   display:flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 30px;
 }
 
@@ -95,4 +96,135 @@ footer {
   justify-content: center;
   position: absolute;
   bottom: 0
+}
+
+.AddTipoAlojamientoForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* CONTACTO */
+
+.contacto {
+  text-align: center;
+  margin: 50px auto;
+  max-width: 800px;
+}
+
+.contacto h1 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.contacto h3 {
+  font-size: 18px;
+  color: #666;
+  margin-bottom: 30px;
+}
+
+.contacto ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  width: fit-content;
+  margin: auto;
+}
+
+.contacto ul li {
+  margin-bottom: 15px;
+}
+
+.contacto ul li a {
+  /* color: #1A84CB; */
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border: 2px solid #00000074; 
+  border-radius: 5px;
+  white-space: nowrap;
+}
+
+.contacto ul li a:hover {
+  background-color: #1A84CB;
+  color: #fff;
+}
+
+.contacto ul li img.socialIcon {
+  margin-right: 10px;
+}
+
+/* BUSQUEDA */
+.search-form {
+  /* text-align: center; */
+  margin: 50px auto;
+  max-width: 800px;
+}
+
+.search-form h1 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 40px;
+}
+
+/* .search-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+/* .search-form label {
+  margin-bottom: 10px;
+}
+
+.search-form input[type="text"],
+.search-form input[type="date"],
+.search-form input[type="number"] {
+  padding: 8px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 300px;
+}
+ */
+.search-form button {
+  background-color: #1A84CB;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.search-form button:hover {
+  background-color: #0C3B5A;
+}
+
+/* NOSOTROS */
+
+.empleado {
+  text-align: center;
+}
+
+.empleado p {
+  margin-bottom: 0;
+}
+
+.empleado img {
+  border-radius: 50%;
+  margin-bottom: 0;
+}
+
+/* HOME */
+.typeImg {
+  text-align: center;
+}
+
+.typeImg:hover {
+  text-decoration: none; 
 }
